--- a/Homework-3/Titanic.ipynb
+++ b/Homework-3/Titanic.ipynb
@@ -18,9 +18,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, BaggingClassifier, AdaBoostClassifier\n",
     "from sklearn.model_selection import cross_val_score, KFold\n"
    ]
   },
@@ -1812,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1836,15 +1835,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Scores (Decision Tree): [0.79888268 0.80337079 0.86516854 0.79775281 0.83146067]\n",
-      "Average Classification Accuracy (Decision Tree): 0.82\n"
+      "Cross-Validation Scores - Decision Tree: [0.79888268 0.80337079 0.86516854 0.79775281 0.83146067]\n",
+      "Average Classification Accuracy - Decision Tree: 0.82\n"
      ]
     }
    ],
@@ -1852,17 +1851,15 @@
     "k_fold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "cv_scores_dt = cross_val_score(dt_model, X_train_data, y_train_data, cv=k_fold)\n",
     "\n",
-    "# Calculate average classification accuracy\n",
     "average_accuracy_dt = np.mean(cv_scores_dt)\n",
     "\n",
-    "# Print the results\n",
-    "print(f\"Cross-Validation Scores (Decision Tree): {cv_scores_dt}\")\n",
-    "print(f\"Average Classification Accuracy (Decision Tree): {average_accuracy_dt:.2f}\")"
+    "print(f\"Cross-Validation Scores - Decision Tree: {cv_scores_dt}\")\n",
+    "print(f\"Average Classification Accuracy - Decision Tree: {average_accuracy_dt:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,32 +1868,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(max_depth=5, random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(max_depth=5, random_state=0)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier(max_depth=5, random_state=0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rf_model=RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0)\n",
-    "rf_model.fit(X_train_data, y_train_data)"
+    "rf_model.fit(X_train_data, y_train_data.values.ravel())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores - Random Forest: [0.81564246 0.8258427  0.86516854 0.80337079 0.83707865]\n",
+      "Average Classification Accuracy - Random Forest: 0.83\n"
+     ]
+    }
+   ],
    "source": [
     "k_fold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "cv_scores_rf = cross_val_score(rf_model, X_train_data, y_train_data, cv=k_fold)\n",
+    "cv_scores_rf = cross_val_score(rf_model, X_train_data, y_train_data.values.ravel(), cv=k_fold)\n",
     "\n",
     "average_accuracy_rf = np.mean(cv_scores_rf)\n",
     "\n",
-    "print(f\"Cross-Validation Scores (Random Forest): {cv_scores_rf}\")\n",
-    "print(f\"Average Classification Accuracy (Random Forest): {average_accuracy_rf:.2f}\")"
+    "print(f\"Cross-Validation Scores - Random Forest: {cv_scores_rf}\")\n",
+    "print(f\"Average Classification Accuracy - Random Forest: {average_accuracy_rf:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1905,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1928,11 +1948,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bagging Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bagging_classifier = BaggingClassifier(dt_model, n_estimators=100, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores (Decision Tree Bagging): [0.80446927 0.82022472 0.85955056 0.82022472 0.8258427 ]\n",
+      "Average Classification Accuracy (Decision Tree Bagging): 0.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "k_fold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores_bagging = cross_val_score(bagging_classifier, X_train_data, y_train_data.values.ravel(), cv=k_fold)\n",
+    "\n",
+    "average_accuracy_bagging = np.mean(cv_scores_bagging)\n",
+    "\n",
+    "print(f\"Cross-Validation Scores (Decision Tree Bagging): {cv_scores_bagging}\")\n",
+    "print(f\"Average Classification Accuracy (Decision Tree Bagging): {average_accuracy_bagging:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaboost Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adaboost_classifier = AdaBoostClassifier(dt_model, n_estimators=50, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores (Decision Tree - Adaboost): [0.79888268 0.76966292 0.80337079 0.7752809  0.78651685]\n",
+      "Average Classification Accuracy (Decision Tree -  Adaboost): 0.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "k_fold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores_adaboost = cross_val_score(adaboost_classifier, X_train_data, y_train_data.values.ravel(), cv=k_fold)\n",
+    "\n",
+    "average_accuracy_adaboost = np.mean(cv_scores_adaboost)\n",
+    "\n",
+    "print(f\"Cross-Validation Scores (Decision Tree - Adaboost): {cv_scores_adaboost}\")\n",
+    "print(f\"Average Classification Accuracy (Decision Tree -  Adaboost): {average_accuracy_adaboost:.2f}\")"
+   ]
   }
  ],
  "metadata": {
